force-app/main/default/objects/Competitor_Asset__c/Competitor_Asset__c.object-meta.xml
<CustomObject>
    <label>Competitor Asset</label>
    <nameField>
        <displayFormat>CMPA-{00000}</displayFormat>
        <label>Competitor Asset  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>