force-app/main/default/objects/Competitor_Asset__c/fields/AccountAccount__c.field-meta.xml
<CustomField>
    <fullName>AccountAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Competitor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitor Assets</relationshipLabel>
    <relationshipName>Competitor_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>