force-app/main/default/objects/Competitor_Asset__c/fields/Competitor_Product__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Product__c</fullName>
    <label>Competitor Product</label>
    <referenceTo>Competitor_Product__c</referenceTo>
    <relationshipLabel>Competitor Assets</relationshipLabel>
    <relationshipName>Competitor_Assets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>